2007-02-09  Neil Jagdish Patel  <njp@Fedora>

	Launchers and tasks separated, separator added

	* avant-preferences/avant-preferences.in.py:
	* avant-preferences/avant-preferences.py:
	* avant-preferences/window.glade:
	* src/awn-bar.c: (render), (awn_bar_set_separator_position):
	* src/awn-bar.h:
	* src/awn-gconf.c: (awn_gconf_new), (awn_notify_bool):
	* src/awn-gconf.h:
	* src/awn-task-manager.c: (_load_launchers_func),
	(_task_manager_window_opened), (_task_manager_drag_data_recieved),
	(_task_refresh), (_refresh_box),
	(awn_task_manager_remove_launcher), (awn_task_manager_remove_task),
	(awn_task_manager_update_separator_position),
	(awn_task_manager_new):
	* src/awn-task.c: (activate_window), (awn_task_drag_motion):
	* src/main.c: (main):

2007-02-09  Neil Jagdish Patel  <njp@Fedora>

	Changed the code for getting the icon theme.

	* src/awn-task.c: (awn_task_set_window), (icon_loader_get_icon):
	* src/awn-window.c:
	* src/awn-window.h:
	* src/main.c: (expose):

2007-02-09  Neil Jagdish Patel  <njp@Fedora>

	* src/main.c: popup now includes a link to avant-preferences

2007-02-09  Neil Jagdish Patel  <njp@Fedora>

	Added 1 sec delay before window activates on drag.

	* src/awn-task.c: (awn_task_class_init), (awn_task_button_press),
	(activate_window), (awn_task_drag_motion), (awn_task_drag_leave),
	(awn_task_new):
	* src/awn-title.c: (render):

2007-02-09  Neil Jagdish Patel  <njp@Fedora>

	D&D works for entire bar. Bar has popup to close.

	* src/awn-bar.c: (render), (awn_bar_resize):
	* src/awn-task-manager.c: (awn_task_manager_new):
	* src/awn-task.c: (_task_drag_data_recieved):
	* src/awn-window.c: (awn_window_init), (render):
	* src/main.c: (main), (expose), (start_drag_animation),
	(drag_motion), (leave_notify_event), (close_function),
	(create_menu), (button_press_event):

2007-02-06  Neil Jagdish Patel  <njpatel@gmail.com>

	Better launcher to window matching code.

	* src/awn-task-manager.c:

2007-02-06  Neil Jagdish Patel  <njpatel@gmail.com>
