@@ -47,6 +47,7 @@
 #define APP_PATH		"/apps/avant-window-navigator/app"
 #define APP_ACTIVE_PNG		"/apps/avant-window-navigator/app/active_png" /*string*/
 #define APP_USE_PNG		"/apps/avant-window-navigator/app/use_png" /*bool*/
+#define APP_FADE_EFFECT		"/apps/avant-window-navigator/app/fade_effect" /*bool*/
 
 #define TITLE_PATH		"/apps/avant-window-navigator/title"
 #define TITLE_TEXT_COLOR	"/apps/avant-window-navigator/title/text_color" /*color*/
@@ -122,6 +123,7 @@ awn_gconf_new()
 	gconf_client_add_dir(client, APP_PATH, GCONF_CLIENT_PRELOAD_NONE, NULL);
 	awn_load_string(client, APP_ACTIVE_PNG, &s->active_png, "~");
 	awn_load_bool(client, APP_USE_PNG, &s->use_png, FALSE);
+	awn_load_bool(client, APP_FADE_EFFECT, &s->fade_effect, FALSE);
 	
 	/* Title settings */
 	gconf_client_add_dir(client, TITLE_PATH, GCONF_CLIENT_PRELOAD_NONE, NULL);
